<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center" 
    android:background="#33000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:gravity="center"
            android:visibility="visible"
            android:orientation="horizontal"
            android:padding="16dp" >

            <bekaku.android.forum.font.FontAwesomeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fa_server"
                android:textColor="@color/color_grey_600"
                android:layout_marginEnd="5dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dialog_universal_warning_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_server_ip"
                android:textColor="@color/color_grey_800"
                android:layout_marginStart="5dp"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="22dp"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            android:paddingTop="22dp" >
            <ProgressBar
                android:layout_gravity="center_horizontal"
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/serverIp"
                    android:text="@string/localhostIp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_server_ip_hint"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal" >
            
			<TextView
                android:id="@+id/cancleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="#fff"
                android:gravity="center"
                android:minWidth="64dp"
                android:padding="12dp"
                android:text="@string/action_cancle"
                android:textSize="14sp" />
                
            <TextView
                android:id="@+id/confirmBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:minWidth="64dp"
                android:padding="12dp"
                android:text="@string/action_ok"
                android:textColor="#fff"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>