<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar_main"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:background="@drawable/custom_border_bottom_1"
    app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/toolbar_img"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="0dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/default_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@drawable/search_bar_background"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="8dp">

                <bekaku.android.forum.font.FontAwesomeTextView
                    android:text="@string/fa_search"
                    android:layout_marginEnd="10dp"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingTop="5dp"
                    android:text="@string/action_search_thread"
                    android:textSize="14sp"
                   />
            </LinearLayout>


        </LinearLayout>


        <bekaku.android.forum.font.FontAwesomeTextView
            android:id="@+id/toolbar_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/fa_plus"
            android:textSize="20sp" />


    </RelativeLayout>


</android.support.v7.widget.Toolbar>
