<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".NewTopicActivity">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="25dp">

            <LinearLayout
                android:id="@+id/new_topic_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/appLogo"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="15dp"
                    android:src="@drawable/outline_create_24" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/topic_title"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <EditText
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:ems="10"
                    android:gravity="left|top"
                    android:hint="@string/topic_content"
                    android:inputType="textMultiLine"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />


                <Button
                    android:id="@+id/submitPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_ok"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</layout>