<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#33000000"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/text_dummy"
                android:textColor="@color/color_grey_800"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="26dp"
            android:paddingTop="22dp"
            android:paddingRight="26dp"
            android:paddingBottom="22dp">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/text_dummy"
                android:textColor="@color/color_grey_800"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="#fff"
                android:gravity="center"
                android:minWidth="64dp"
                android:padding="12dp"
                android:text="@string/action_cancle"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/confirmBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/color_red_1"
                android:gravity="center"
                android:minWidth="64dp"
                android:padding="12dp"
                android:text="@string/action_ok"
                android:textColor="#fff"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>